--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -68,3 +68,48 @@
         min-height: 80px; /* Ajustar altura mínima en móviles */
     }
 }
+
+:root {
+    --color2: #00d4cf;
+    --color3: #00afbb;
+    --color4: #108ba0;
+    --color5: #2b687e;
+    --color6: #27afe9;
+}
+
+body {
+    background-color: var(--color1);
+}
+
+.navbar {
+    background-color: var(--color2);
+}
+
+.navbar-brand, .nav-link {
+    color: var(--color6);
+}
+
+.header {
+    background-color: var(--color3);
+    color: var(--color6);
+}
+
+.section {
+    background-color: var(--color4);
+    color: var(--color1);
+}
+
+.footer {
+    background-color: var(--color5);
+    color: var(--color1);
+}
+
+.btn-primary {
+    background-color: var(--color6);
+    border-color: var(--color6);
+}
+
+.btn-primary:hover {
+    background-color: var(--color5);
+    border-color: var(--color5);
+}
